[package]
name = "reqwest-narrowing"
description = "Track down a behaviour change between Reqwest 0.11 and 0.12 against the Figma API."
authors = ["Thomas Johnson <NTmatter@gmail.com"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
