[package]
name = "reqwest-narrowing"
description = "Track down a behaviour change between Reqwest 0.11 and 0.12 against the Figma API."
authors = ["Thomas Johnson <NTmatter@gmail.com"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
reqwest_11 = { package = "reqwest", version = "=0.11.27", default-features = false, features = ["native-tls"] }
reqwest_12 = { package = "reqwest", version = "=0.12.1",  default-features = false, features = ["native-tls"] }
tokio = { version = "1.36.0", features = ["full"] }

